<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_Krajalnica" Id="{b1cca2fa-5ba4-460e-b30f-13d8a51cc995}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Krajalnica IMPLEMENTS ITF_StanMaszyny
VAR_INPUT
	stParametry								: DUT_Krajalnica_Parametry;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	bC1_Czujnik0							: ITF_Czujnik;
	bC1_CzujnikMax							: ITF_Czujnik;
	fbC1_Elektrozawor						: ITF_Elektozawor;
	bC2_Czujnik0							: ITF_Czujnik;
	bC2_CzujnikMax							: ITF_Czujnik;
	fbC2_Elektrozawor						: ITF_Elektozawor;
	bPW_Z_Czujnik0							: ITF_Czujnik;
	bPW_Z_CzujnikMax						: ITF_Czujnik;
	fbPW_Z_Elektrozawor						: ITF_Elektozawor;
	bPW_P_Czujnik0							: ITF_Czujnik;
	bPW_P_CzujnikMax						: ITF_Czujnik;
	fbPW_P_Elektrozawor						: ITF_Elektozawor;	
	bWafalNaWejsciu							: ITF_Czujnik;
	bWafalDoCiecia1							: ITF_Czujnik;
	bWafalDoCiecia2							: ITF_Czujnik;
	
	
	fbCiecie1								: FB_Ciecie (					bCzujnik0Naped			 	:= bC1_Czujnik0,
                                                            				bCzujnikMaxNaped		 	:= bC1_CzujnikMax,
                                                            				fbElektrozaworNaped		 	:= fbC1_Elektrozawor);
	fbCiecie2								: FB_Ciecie (					bCzujnik0Naped			 	:= bC2_Czujnik0,
                                                            				bCzujnikMaxNaped		 	:= bC2_CzujnikMax,
                                                            				fbElektrozaworNaped		 	:= fbC2_Elektrozawor);
	fbPodawanieWafla						: FB_PrzesuwaczNaSilowniku (	bCzujnik0Zabieraka			:= bPW_Z_Czujnik0,
                                                                            bCzujnikMaxZabieraka		:= bPW_Z_CzujnikMax,
                                                                            fbElektrozaworZabieraka		:= fbPW_Z_Elektrozawor,
                                                                            bCzujnik0Przesuwacza		:= bPW_P_Czujnik0,
                                                                            bCzujnikMaxPrzesuwacza		:= bPW_P_CzujnikMax,
                                                                            fbElektrozaworPrzesuwacza	:= fbPW_P_Elektrozawor);
	
	arrElementyWykonawcze 					: ARRAY [1..GVL_LogowanieBledow_Stale.MAX_ILOSC_ELEMENTOW_NA_PODZESPOL] OF ITF_LogowanieBledow_ElementWykonawczy := 
														[	fbCiecie1.fbLBKomunikacja,
															fbCiecie2.fbLBKomunikacja,
															fbPodawanieWafla.fbLBKomunikacja];
															
	fbLBKomunikacja							: FB_PrzesuwaczNaSilowniku_Komunikacja 
														(	arrElementyWykonawcze := arrElementyWykonawcze,
															iIloscPodlementow := 3);	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbCiecie1.Praca ();
fbCiecie2.Praca ();
fbPodawanieWafla.Praca ();
]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{58f65211-82b7-4ff8-8687-0ccc3dfaf66d}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	bC1_Czujnik0							: ITF_Czujnik;
	bC1_CzujnikMax							: ITF_Czujnik;
	fbC1_Elektrozawor						: ITF_Elektozawor;
	bC2_Czujnik0							: ITF_Czujnik;
	bC2_CzujnikMax							: ITF_Czujnik;
	fbC2_Elektrozawor						: ITF_Elektozawor;
	bPW_Z_Czujnik0							: ITF_Czujnik;
	bPW_Z_CzujnikMax						: ITF_Czujnik;
	fbPW_Z_Elektrozawor						: ITF_Elektozawor;
	bPW_P_Czujnik0							: ITF_Czujnik;
	bPW_P_CzujnikMax						: ITF_Czujnik;
	fbPW_P_Elektrozawor						: ITF_Elektozawor;
	bWafalNaWejsciu							: ITF_Czujnik;
	bWafalDoCiecia1							: ITF_Czujnik;
	bWafalDoCiecia2							: ITF_Czujnik;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bC1_Czujnik0							:= bC1_Czujnik0;
THIS^.bC1_CzujnikMax						:= bC1_CzujnikMax;
THIS^.fbC1_Elektrozawor						:= fbC1_Elektrozawor;
THIS^.bC2_Czujnik0							:= bC2_Czujnik0;
THIS^.bC2_CzujnikMax						:= bC2_CzujnikMax;
THIS^.fbC2_Elektrozawor						:= fbC2_Elektrozawor;
THIS^.bPW_Z_Czujnik0						:= bPW_Z_Czujnik0; 
THIS^.bPW_Z_CzujnikMax						:= bPW_Z_CzujnikMax; 
THIS^.fbPW_Z_Elektrozawor					:= fbPW_Z_Elektrozawor; 
THIS^.bPW_P_Czujnik0						:= bPW_P_Czujnik0; 
THIS^.bPW_P_CzujnikMax						:= bPW_P_CzujnikMax; 
THIS^.fbPW_P_Elektrozawor					:= fbPW_P_Elektrozawor; 
THIS^.bWafalNaWejsciu						:= bWafalNaWejsciu;
THIS^.bWafalDoCiecia1						:= bWafalDoCiecia1;
THIS^.bWafalDoCiecia2						:= bWafalDoCiecia2;

THIS^.fbCiecie1.FB_init (FALSE, FALSE, bC1_Czujnik0, bC1_CzujnikMax, fbC1_Elektrozawor);	
THIS^.fbCiecie2.FB_init (FALSE, FALSE, bC2_Czujnik0, bC2_CzujnikMax, fbC2_Elektrozawor);
THIS^.fbPodawanieWafla.FB_init (FALSE, FALSE, bPW_Z_Czujnik0, bPW_Z_CzujnikMax, fbPW_Z_Elektrozawor, bPW_P_Czujnik0, bPW_P_CzujnikMax ,fbPW_P_Elektrozawor); 

]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Aborted" Id="{11732134-ddbf-4743-ab39-8f1b6de230ab}">
      <Declaration><![CDATA[METHOD SM_Aborted : BOOL
VAR_INPUT

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Aborting" Id="{17e2ac69-bd6c-456d-982e-330865c646bc}">
      <Declaration><![CDATA[METHOD SM_Aborting : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Clearing" Id="{f11bff81-ef5b-4db9-9fb6-b5f4308e4c83}">
      <Declaration><![CDATA[METHOD SM_Clearing : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Complete" Id="{7d7d2c8a-f309-43e0-8c3a-2cef248ab451}">
      <Declaration><![CDATA[METHOD SM_Complete : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Completing" Id="{2d037f69-9a7c-440c-b629-301e312682f3}">
      <Declaration><![CDATA[METHOD SM_Completing : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Execute" Id="{e4902feb-fd05-41c9-9465-a6e9009aa608}">
      <Declaration><![CDATA[METHOD SM_Execute : BOOL
VAR_INPUT
	eTrybPracy								: E_PMLUnitMode;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE eTrybPracy OF
	E_PMLUnitMode.MANUAL		:
		;
	E_PMLUnitMode.SEMIAUTOMATIC	:
		;
	E_PMLUnitMode.AUTOMATIC		:
		;
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Held" Id="{3ac3cc8e-c1a0-4ac9-9431-9fc62438a175}">
      <Declaration><![CDATA[METHOD SM_Held : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Holding" Id="{4e70d810-4072-4abb-86e7-0b8a82653d7f}">
      <Declaration><![CDATA[METHOD SM_Holding : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Idle" Id="{abd85865-0c8f-456f-9d92-541097300101}">
      <Declaration><![CDATA[METHOD SM_Idle : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Resetting" Id="{cf7a7a46-92e5-4b6c-9942-b554e9193634}">
      <Declaration><![CDATA[METHOD SM_Resetting : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Starting" Id="{5b246055-cb9e-4abb-b856-5259ea59e5c7}">
      <Declaration><![CDATA[METHOD SM_Starting : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Stopped" Id="{ec8c12b2-651e-41be-a543-a9403e48675b}">
      <Declaration><![CDATA[METHOD SM_Stopped : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Stopping" Id="{1b5a5a90-445f-465e-8492-f09983dcbeb6}">
      <Declaration><![CDATA[METHOD SM_Stopping : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Suspended" Id="{8a180c29-3734-48de-8589-f9c274cc9031}">
      <Declaration><![CDATA[METHOD SM_Suspended : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Suspending" Id="{2dacfcfa-b778-4e98-a465-b13954d6da59}">
      <Declaration><![CDATA[METHOD SM_Suspending : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Unholding" Id="{ef10e97b-c942-454f-b430-c8aaeff58b64}">
      <Declaration><![CDATA[METHOD SM_Unholding : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SM_Unsuspending" Id="{fbb47822-7f21-45ea-978c-c5631d77a8e6}">
      <Declaration><![CDATA[METHOD SM_Unsuspending : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Krajalnica">
      <LineId Id="9" Count="0" />
      <LineId Id="69" Count="2" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.FB_init">
      <LineId Id="38" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="47" Count="0" />
      <LineId Id="62" Count="4" />
      <LineId Id="53" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="42" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Aborted">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Aborting">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Clearing">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Complete">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Completing">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Execute">
      <LineId Id="4" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="4" />
      <LineId Id="11" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Held">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Holding">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Idle">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Resetting">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Starting">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Stopped">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Stopping">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Suspended">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Suspending">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Unholding">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Krajalnica.SM_Unsuspending">
      <LineId Id="4" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>